Serialize body metrics
